# pomace-amazon

./: .gitignore  .tool-versions  .travis.yml  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
.pomace/www.amazon.com/p/ap/signin/v/: password.yml
.pomace/www.amazon.com/p/asv/reload/order/v/: authenticated.yml  verify.yml
.pomace/www.amazon.com/p/asv/reload/thank-you/v/: default.yml
.pomace/www.amazon.com/∕ap∕accountfixup/: default.yml
.pomace/www.amazon.com/∕ap∕signin/: email.yml  password.yml
.pomace/www.amazon.com/∕asv∕reload∕order/: authenticated.yml  unauthenticated.yml  verify.yml
.pomace/www.amazon.com/∕asv∕reload∕thank-you/: default.yml
amazon/: README.md  __init__.py  __main__.py
sites/www.amazon.com/ap/accountfixup/: default.yml
sites/www.amazon.com/ap/cvf/approval/: default.yml
sites/www.amazon.com/ap/cvf/request/: default.yml
sites/www.amazon.com/ap/mfa/: otp.yml
sites/www.amazon.com/ap/signin/: email.yml  password.yml
sites/www.amazon.com/asv/reload/order/: authenticated.yml  unauthenticated.yml  verify.yml
sites/www.amazon.com/asv/reload/thank-you/: default.yml
sites/www.amazon.com/ax/claim/: default.yml
sites/www.amazon.com/checkout/p/{product}/pay/: default.yml
sites/www.amazon.com/checkout/p/{product}/spc/: default.yml
sites/www.amazon.com/gp/buy/payselect/handlers/display.html/: default.yml
sites/www.amazon.com/gp/buy/primeinterstitial/handlers/display.html/: default.yml
sites/www.amazon.com/gp/product/B086KKT3RX/: default.yml
sites/www.amazon.com/gp/product/B0CHTKNWBL/: default.yml
(+2 files in other folders)
