[tool.poetry]

name = "amazon"
version = "1.0"
description = "Reload your Amazon balance automatically."
authors = ["Jace Browning <jacebrowning@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]

python = "^3.7"

pomace = "~0.6.13"

[tool.poetry.dev-dependencies]

black = "=20.8b1"
isort = "=5.5.1"

[tool.poetry.scripts]

reload-amazon-balance = 'amazon:cli'

[build-system]

requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
