[tool.poetry]

name = "amazon"
version = "1.0"
description = "Reload your Amazon balance automatically."
authors = ["Jace Browning <jacebrowning@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]

python = "^3.7"

pomace = "~0.9"

[tool.poetry.dev-dependencies]

black = "=21.8b0"
isort = "=5.9.3"

[tool.poetry.scripts]

reload-amazon-balance = "amazon:cli"

[tool.isort]

profile = "black"

[build-system]

requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
