[tool.poetry]

name = "amazon"
version = "1.0"
description = "Reload your Amazon balance automatically."
authors = ["Jace Browning <jacebrowning@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]

python = "^3.8"

pomace = "~0.12.4"

[tool.poetry.dev-dependencies]

black = "^22.1"
isort = "^5.10"

[tool.poetry.scripts]

reload-amazon-balance = "amazon:cli"

[tool.black]

quiet = true

[tool.isort]

profile = "black"

[build-system]

requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
